# Forex-wws27

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  SESSION_STATE.md  fly.toml  pyproject.toml  requirements.txt
app/: auth.py  config.py  db.py  devin_client.py  github_export.py  main.py  sync.py
app/static/: app.js  style.css
app/templates/: app.html  login.html
tests/: conftest.py  test_app.py
