[project]
name = "devin-chat-aggregator"
version = "0.1.0"
description = "Self-hosted chat UI that proxies Devin API and stores history across multiple Devin accounts."
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]==0.115.6",
    "uvicorn[standard]==0.32.1",
    "httpx==0.28.1",
    "sqlalchemy==2.0.36",
    "itsdangerous==2.2.0",
    "jinja2==3.1.4",
    "python-multipart==0.0.20",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
]

[tool.setuptools.packages.find]
include = ["app*"]
